[package]
name = "yahtzee"
version = "0.1.0"
description = "A CLI implementation of the classic game of Yahtzee"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
count_where = "0.1"
maplit = "1.0"
text_io = "0.1.8"
regex = "1"