[package]
name = "yahtzee"
version = "0.1.1"
description = "A CLI implementation of the classic game of Yahtzee"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
license = "MIT"
readme = "README.mediawiki"
homepage = "https://github.com/bryceac/yahtzee_rs"
repository = "https://github.com/bryceac/yahtzee_rs"
keywords = ["gamedev", "game", "yahtzee", "yatzy", "cli"]
categories = ["command-line-utilities", "games"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_yahtzee"
path = "src/lib/lib.rs"

[[bin]]
name = "yahtzee"
path = "src/main.rs"

[dependencies]
rand = "0.8.3"
count_where = "0.1"
maplit = "1.0"
text_io = "0.1.8"
regex = "1"
[package.metadata.rpm]
package = "yahtzee"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
yahtzee = { path = "/usr/bin/yahtzee" }
